Mark `peer` dependencies explicitly in `package-lock.json`, reorganize README with deprecation updates and new sections for debugging/development, and migrate examples to the `filters` array format.